# eragrok

./: CMakeLists.txt  CMakeLists_sources.txt  Makefile  README.md  eragrok.py  eragrok_users.csv  licence.txt  rudy_cycle.csv  rudy_entrainement.csv  rudy_nutrition.csv  run_output.txt
Dev/Claude/BASE/: ARCHITECTURE_FORMALISEE.txt  CORRESPONDANCE_PYTHON_CPP.txt  PLAN_PROGRESSION_DETAILLE.txt  cycle.html  dashboard.html  nutrition.html  workouts.html
Dev/Claude/BASE/Core/Cycle/Modules/: current_cycle.c  current_cycle.h  cycle_effects.c  cycle_effects.h  cycle_history.c  cycle_history.h  cycle_notes.c  cycle_notes.h  cycle_reminders.c  cycle_reminders.h  cycle_settings.c  cycle_settings.h  cycle_summary.c  cycle_summary.h  cycle_timeline.c  cycle_timeline.h  (+4 more)
Dev/app/: cycle.html  dashboard.html  nutrition.html  progres.html  settings.html  workouts.html
Dev/app/js/: api.js  navigation.js
Dev/docs/: QUICKSTART.md  QUICKSTART_UBUNTU.md  README_CGI.md  README_WSL.md
Dev/scripts/: build.bat  build.sh  build_cgi.sh  install_ubuntu.sh  rename_to_threshold.sh
Dev/web/: BUILD_SUMMARY.md  QUICKSTART.md  README.md  README_CSS.md  START_NAV_TEST.bat  START_TEST_SESSIONHELPER.bat  _nav_snippet.html  _script_nav.txt  add_navigation.py  cycle.html  fix_all_navigation.bat  index.html  nav-test.html  navigation.html  nutrition.html  progres.html  settings.html  test-api.html  test-sessionhelper.html  workout.html
Dev/web/css/: common.css
Dev/web/js/: api.js  navigation.js
Dev/web/modules/SessionHelper/: README.md  SessionHelper.css  SessionHelper.html  SessionHelper.js
cgi/: api.cpp  threshold.cgi
data/: check_data.py  cycle_module.py  db.py  entrainement_history.py  entrainement_module.py  entrainement_module.txt  entrainement_pdf.py  entrainement_schedule.py  features_module.py  nutrition_module.py  pdf_utils.py  theme.py  training_techniques.py  utils.py  weight_chart.py
eragrok/: eragrok.py  run_output.txt
eragrok/data/: cycle_module.py  db.py  entrainement_module.py  features_module.py  migrate.py  nutrition_module.py  pdf_utils.py  prices_module.py  theme.py  utils.py
eragrok/users/: eragrok.db
eragrok/users/rudy/: cycle_qualified.ok.migrated  nutrition.csv.migrated  planning.csv.migrated  rudy.db
include/: db_wrapper.h  exercise_data.h  food_data.h  meal_engine.h  threshold_types.h  utils.h
src/: db_wrapper.cpp  exercise_data.cpp  food_data.cpp  meal_engine.cpp  threshold_types.cpp  utils.cpp
test/: main_test.cpp
threshold/: main.py  progres.html  pyproject.toml
threshold/Modules/: set&rest.c  today_workout.c
threshold/data/: app_state.py  barcode_scanner.py  cycle.py  db.py  entrainement.py  exercices_catalogue.py  food_catalogue.py  injection_schedule.py  logger.py  meal_engine.py  meal_generator.py  migrate_schema.py  nutrition.py  pdf_utils.py  prices_module.py  profil.py  shopping.py  utils.py  weight_chart.py  widgets.py
threshold/data/logic/: __init__.py  cycle_logic.py  entrainement_logic.py  nutrition_logic.py
threshold/data/migrations/: global_001_initial.sql  user_001_initial.sql  user_002_cycle_columns.sql  user_003_custom_products.sql  user_004_custom_food.sql
threshold/ui/: dashboard.py  logo.py  page_utils.py  snackbar.py  theme.py
threshold/users/rudy/: cycle.csv.migrated  rudy.db
users/: eragrok_users.csv  eragrok_users.csv.migrated  threshold.db
users/erazor/: erazor.db
users/rudy/: cycle.csv  entrainement.csv  nutrition.csv  planning.csv  rudy.db  training_history.json  training_history.json.migrated
users/rudy/programmes/: prog_20260306_125152.json.migrated
(+86 files in other folders)
